l2go - layout bugfix.

--- a/themes/lecture2go-theme/docroot/_diffs/css/l2go_view960.css
+++ b/themes/lecture2go-theme/docroot/_diffs/css/l2go_view960.css
@@ -3,6 +3,10 @@
 	    background: rgba(0, 0, 0, 0) url("/lecture2go-theme/images/logo_l2go.png") no-repeat scroll right -3px top -8px / 159px auto;
 	}
 
+	.aui .row-fluid::before, .aui .row-fluid::after {
+	    margin-top: 30px;
+	}
+
 	#wrapper {
 	    background-color: #fff;
 	    max-width: 1100px;
@@ -15,10 +19,6 @@
     	visibility: hidden;
 	}
 
-	.aui .row-fluid::before, .aui .row-fluid::after {
-	    margin-top: 5px;
-	}
-	
 	#content {
     	margin-top: 10px;
 	}
@@ -27,6 +27,13 @@
 	    height: 34px;
 	}
 
+	.search input.button {
+	    float: right;
+	    height: 24px;
+	    margin-right: -313px;
+	    margin-top: -28px;
+	}
+	
 	.aui .container-fluid::before, .aui .container-fluid::after {
 	    content: "";
 	    display: table;
@@ -35,17 +42,10 @@
 	    max-width: 998px;
 	}
 
-	.search input.button {
-	    float: right;
-	    height: 25px;
-	    margin-right: -313px;
-	    margin-top: -6px;
-	}
-	
 	#_lgopenaccessvideos_WAR_lecture2goportlet_searchQuery {
 	    float: right;
 	    height: 19px;
-	    margin: -8px 0 2px;
+	    margin: -30px 0 2px;
 	    padding: 4px 0 4px 4px;
 	    width: 309px;
 	}
